--- a/TelaInicioProfessor/src/main/java/br/poliedro/telainicioprofessor/telas/TelaPerguntaProfessor.form
+++ b/TelaInicioProfessor/src/main/java/br/poliedro/telainicioprofessor/telas/TelaPerguntaProfessor.form
@@ -126,7 +126,7 @@
                 </Property>
                 <Property name="borderPainted" type="boolean" value="false"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor Padr&#xe3;o"/>
                 </Property>
                 <Property name="focusPainted" type="boolean" value="false"/>
                 <Property name="focusable" type="boolean" value="false"/>
@@ -155,7 +155,7 @@
                     </Property>
                     <Property name="lineWrap" type="boolean" value="true"/>
                     <Property name="rows" type="int" value="5"/>
-                    <Property name="text" type="java.lang.String" value="Insira a pergunta aqui:"/>
+                    <Property name="text" type="java.lang.String" value="Insira a Pergunta:"/>
                     <Property name="wrapStyleWord" type="boolean" value="true"/>
                     <Property name="focusable" type="boolean" value="false"/>
                   </Properties>
@@ -374,7 +374,7 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Salvar"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor Padr&#xe3;o"/>
                     </Property>
                     <Property name="focusable" type="boolean" value="false"/>
                   </Properties>
