--- a/PoliedroAMilhao/src/main/java/br/mycompany/poliedroamilhao/telas/CadastroPerguntaTela.form
+++ b/PoliedroAMilhao/src/main/java/br/mycompany/poliedroamilhao/telas/CadastroPerguntaTela.form
@@ -105,7 +105,7 @@
               </Border>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Padr&#xe3;o"/>
+              <Color id="Cursor em Forma de M&#xe3;o"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
@@ -128,7 +128,7 @@
               </Border>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Padr&#xe3;o"/>
+              <Color id="Cursor em Forma de M&#xe3;o"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
@@ -150,7 +150,7 @@
               </Border>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Padr&#xe3;o"/>
+              <Color id="Cursor em Forma de M&#xe3;o"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
@@ -173,7 +173,7 @@
               </Border>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Padr&#xe3;o"/>
+              <Color id="Cursor em Forma de M&#xe3;o"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
