--- a/PoliedroAMilhao/src/main/java/br/mycompany/poliedroamilhao/telas/SucessoCadastroUsuarioTela.form
+++ b/PoliedroAMilhao/src/main/java/br/mycompany/poliedroamilhao/telas/SucessoCadastroUsuarioTela.form
@@ -98,8 +98,10 @@
             <Property name="borderPainted" type="boolean" value="false"/>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Padr&#xe3;o"/>
+              <Color id="Cursor em Forma de M&#xe3;o"/>
             </Property>
+            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="focusable" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
