--- a/TelaAluno/src/main/java/com/mycompany/TelaAluno/telas/TelaVitoriaJogo.form
+++ b/TelaAluno/src/main/java/com/mycompany/TelaAluno/telas/TelaVitoriaJogo.form
@@ -49,17 +49,12 @@
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
               <Group type="102" attributes="0">
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace pref="96" max="32767" attributes="0"/>
-                          <Component id="parabensPanel" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="sairBotao" min="-2" pref="800" max="-2" attributes="0"/>
-                              <Component id="jogarnovamenteBotao" min="-2" pref="800" max="-2" attributes="0"/>
-                          </Group>
+                      <Component id="parabensPanel" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                          <Component id="sairBotao" min="-2" pref="800" max="-2" attributes="0"/>
+                          <Component id="jogarnovamenteBotao" min="-2" pref="800" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
